various fixes
- fixed overflowing elements on mobile
- fixed body scrollbar in awkward spot on desktop
- added click-outside-to-close to sidebar

--- a/index.css
+++ b/index.css
@@ -56,10 +56,9 @@ body {
   scroll-snap-type: x mandatory;
   overflow-x: auto;
   display: flex;
-  height: 100%;
+  height: calc(100vh - 140px);
 }
 .app-title {
-  width: 100%;
   background: var(--top-bar-background-color);
   border-bottom: 1px solid #ccc;
   margin: 0 0 0 20px;
@@ -172,9 +171,9 @@ tracker-item {
 /* sidebar */
 .sidebar {
   position: absolute;
-  height: 100%;
+  height: 100vh;
   width: 85%;
-  padding: 10px 20px;
+  padding: 0px 20px;
   background-color: #fcfcfc;
   border-right: 1px solid #ccc;
   box-shadow: 5px 5px 10px grey;
@@ -185,7 +184,7 @@ tracker-item {
   transform: translateX(0);
 }
 .sidebar h2 {
-  margin: 0 0 50px;
+  margin: 10px 0 50px;
 }
 .sidebar .open-button {
   fill: #111;
